--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![Design preview for the Social links profile coding challenge](./preview.jpg)",
   "main": "index.js",
   "scripts": {
-    "build": "npx tailwindcss -i ./src/main.css -o ./public/style.css --watch"
+    "build": "npx tailwindcss -i ./src/main.css -o ./public/style.css"
   },
   "keywords": [],
   "author": "",
